--- a/Demo/Podfile
+++ b/Demo/Podfile
@@ -6,6 +6,7 @@ target 'Demo' do
   use_frameworks!
 
   # Pods for Demo
-  pod 'GDImage', :git => 'https://github.com/spinach/GDImage', :tag => '1.0.1'
+  # pod 'GDImage', :git => 'https://github.com/spinach/GDImage', :tag => '1.0.1'
+  pod 'GDImage', :path => "../"
 
 end
